Frontend/manifest/Exp-Frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-frontend
  labels:
    app: ext-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-frontend
  template:
    metadata:
      labels:
        app: ext-frontend
    spec:
      containers:
        - name: ext-frontend
          image: robadrinacr1.azurecr.io/ext-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ext-frontend-service
spec:
  selector:
    app: ext-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
